django/k8s_django/k8s/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdjango-celery-beat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-beat
  template:
    metadata:
      labels:
        component: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: mamithi/k8sdjango:v0.0.7
          command: ['celery', '-A', 'k8s_django', 'beat', '-l', 'debug']
