django/k8s_django/k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdjango-celery-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-worker
  template:
    metadata:
      labels:
        component: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: mamithi/k8sdjango:v0.0.7
          command: ['celery', '-A', 'k8s_django', 'worker', '-l', 'info']
