django/k8s_django/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdjango-deployment
  labels:
    component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: k8sdjango
          image: mamithi/k8sdjango:v0.0.7
          ports:
            - containerPort: 8000
