django/k8s_django/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdjango-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-container
  template:
    metadata:
      labels:
        component: postgres-container
        tier: backend
    spec:
      containers:
        - name: postgres-container
          image: postgres:9.6.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: k8sdjango-postgres-pvc
