django/k8s_django/k8s/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdjango-flower-service
spec:
  selector:
    component: celery-flower
  ports:
    - port: 5555
  type: NodePort
