django/k8s_django/k8s/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8sdjango-postgres-service
spec:
  selector:
    component: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
