django/k8s_django/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdjango-redis-service
spec:
  selector:
    component: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
