django/k8s_django/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdjango-service
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 8000
      targetPort: 8000
